# Bakalarska_praca

./: .gitignore  CMakeCache.txt
bp/: CMakeLists.txt  bp  bp.cbp  main.cpp
bp/APP/: app_handler.cpp  app_handler.h
bp/CSV/: csv_handler.cpp  csv_handler.h
bp/Database/: db_connection.cpp  db_connection.h  db_handler.cpp  db_handler.h
bp/Database/database_local/: db_localDatabase.cpp  db_localDatabase.h  sqlite_local_path.h
bp/data/: configuration.cpp  configuration.h  pathToConfig.h  vector_type.h
